--- a/style.css
+++ b/style.css
@@ -22,16 +22,40 @@ body {
 }
 
 header {
-  height: 100px;
+  /* height: 100px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+}
+
+h1 {
+  text-align: center;
+  font-size: 50px;
 }
 
 #tema {
   width: 80px;
   margin-left: auto;
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+a {
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+}
+
+main {
+  padding-top: 20px;
+}
+
+h2 {
+  font-size: 35px;
 }
 
 img {
@@ -47,11 +71,10 @@ article {
 }
 
 section {
-  border: 1px solid red;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  /*display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: space-between; */
+}
+
+footer p {
+  text-align: center;
 }
